--- a/frontend_options/src/components/HeroSection.css
+++ b/frontend_options/src/components/HeroSection.css
@@ -18,9 +18,18 @@ video {
 }
 
 .hero-container > h1  {
-    color: #fff;
+    color: #3500d3;
     font-size: 100px;
     margin-top: -100px;
+}
+
+.hero-container p {
+    color: #fff;
+}
+
+.btn {
+    color: #fff;
+    background-color: #3500d3;
 }
 
 .hero-container > p {
