--- a/frontend_options/src/components/pages/Dashboard.css
+++ b/frontend_options/src/components/pages/Dashboard.css
@@ -11,17 +11,17 @@
 }
 
 .strong1 {
-    color: white;
+    color: black;
 }
 
 .headtext {
-    color: white;
+    color: black;
 }
 
 .cardbody {
-    color: white;
+    color: black;
 }
 
 .error {
-    color: white;
+    color: black;
 }
