--- a/frontend_options/src/components/HeroSection.css
+++ b/frontend_options/src/components/HeroSection.css
@@ -6,6 +6,20 @@ video {
     z-index: -1;
 }
 
+#bearimage1 {
+    position: relative;
+    right: 260px;
+    top: -300px;
+    width: 600px;
+}
+#bullimage1 {
+    position: relative;
+    left: 350px;
+    width: 800px;
+    top: -350px;
+}
+
+
 .hero-container {
     height: 100vh;
     width: 100%;
@@ -20,7 +34,6 @@ video {
 .hero-container > h1  {
     color: #3500d3;
     font-size: 100px;
-    margin-top: -100px;
 }
 
 .hero-container p {
