--- a/frontend_options/src/components/pages/Home.css
+++ b/frontend_options/src/components/pages/Home.css
@@ -1,8 +1,9 @@
-html {
-    background-color: #282828;
-height: 100%;
-width: 100%;
+html body {
+    width: 100%;
+    height: 100%;
+    background-color: whitesmoke !important;
 }
+
 
 span {
   content: "\00B3";
@@ -30,8 +31,10 @@ span {
 #introtext {
     font-style: italic;
     text-align: center;
-    color:white;
+    color:black;
     font-size: 50px;
+    position: relative;
+    top: 100px;
     text-shadow: 1px 0 black, 2px 0 black, 3px 0 black, 4px 0 black, 5px 0 black;
 }
 
@@ -40,7 +43,8 @@ body {
   }
   #spinner {
     font-size: 300px;
-    margin-top:10px;
+    position: relative;
+    top: 100px;
     color: #3500d3;
     text-align: center;
     animation-name: spin, depth;
@@ -73,12 +77,12 @@ body{
 
 .container1 > h1 {
     margin-top:-400px;
-    color: white;
+    color: black;
 }
 
 .container1 > p {
     margin-top: 10px;
-    color: white;
+    color: black;
     font-style: italic;
     font-family: 'Inconsolata', monospace;
 }
@@ -90,12 +94,12 @@ body{
 }
 
 .container2 > h1 {
-    color: white;
+    color: black;
 }
 
 .container2 > p {
     margin-top: 10px;
-    color: white;
+    color: black;
     font-style: italic;
     font-family: 'Inconsolata', monospace;
 }
@@ -107,17 +111,28 @@ body{
 }
 
 .container3 > h1 {
-    color: white;
+    color: black;
 }
 
 .container3 > p {
     margin-top: 10px;
-    color: white;
+    color: black;
     font-style: italic;
     font-family: 'Inconsolata', monospace;
 }
 
 @media screen and (max-width: 960px) {
+    #bearimage {
+        position: relative;
+        top: 1000px;
+    }
+
+    #bullimage {
+        position: relative;
+        top: 00px;
+        right: 650px;
+    }
+
     .container1 {
         margin-top: 10px;
         margin-left: 30px;
@@ -125,12 +140,12 @@ body{
     }
     
     .container1 > h1 {
-        color: white;
+        color: black;
     }
     
     .container1 > p {
         margin-top: 10px;
-        color: white;
+        color: black;
         font-style: italic;
         font-family: 'Inconsolata', monospace;
     }
@@ -142,12 +157,12 @@ body{
     }
     
     .container2 > h1 {
-        color: white;
+        color: black;
     }
     
     .container2 > p {
         margin-top: 10px;
-        color: white;
+        color: black;
         font-style: italic;
         font-family: 'Inconsolata', monospace;
     }
@@ -159,12 +174,12 @@ body{
     }
     
     .container3 > h1 {
-        color: white;
+        color: black;
     }
     
     .container3 > p {
         margin-top: 10px;
-        color: white;
+        color: black;
         font-style: italic;
         font-family: 'Inconsolata', monospace;
     }
