--- a/frontend_options/src/components/pages/Home.css
+++ b/frontend_options/src/components/pages/Home.css
@@ -47,12 +47,12 @@ body {
     top: 100px;
     color: #3500d3;
     text-align: center;
-    animation-name: spin, depth;
+    /*animation-name: spin, depth;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-duration: 3s;
+    animation-duration: 3s;*/
   }
-  @keyframes spin {
+  /*@keyframes spin {
     from { transform: rotateY(0deg); }
     to { transform: rotateY(-360deg); }
   }
@@ -62,7 +62,7 @@ body {
     50% { text-shadow: 0 0 black; }
     75% { text-shadow: -1px 0 black, -2px 0 black, -3px 0 black, -4px 0 black, -5px 0 black; }
     100% { text-shadow: 0 0 black; }
-  }
+  }*/
 
 body{
     width: 100%;
